--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-    "name": "jf-storage-api",
+    "name": "@jf/storage",
     "description": "Classes and polyfills implementing Web Storage API",
-    "version": "1.0.1",
+    "version": "2.0.0",
     "author": "Joaquín Fernández <public@joaquinfernandez.net>",
     "license": "MIT",
-    "main": "index.js",
     "homepage": "https://github.com/joaquinfq/jfStorage#readme",
     "repository": {
         "type": "git",
@@ -13,13 +12,14 @@
     "bugs": {
         "url": "https://github.com/joaquinfq/jfStorage/issues"
     },
-    "scripts": {
-        "test": "istanbul cover --include-all-sources --root src --print both --report html -x test.js test.js"
-    },
     "devDependencies": {
-        "istanbul": "^0.4.5"
+        "@jf/tests": "^1.1.0",
+        "nyc": "^13.3.0"
     },
     "peerDependencies": {
-        "jf-file-system": "^2.0.3"
+        "@jf/fs": "^3.0.1"
+    },
+    "scripts": {
+        "test": "nyc --reporter=text --all --include=src/** jf-tests"
     }
 }
